getById, Delete and pagination
